@@ -1,4 +1,8 @@
 2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
+	* AggregatingFilter/AggregateValue.[hm]: avoid inter-bundle
+	dependency (derive from PajeEntity instead of UserValue)
+
+2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
 	* AggregatingFilter/AggregateEvent.h, StatViewer/PieCell.m:
 	  correct method name (subValueAtIndex:)
 
